--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,3 +64,7 @@
     @apply bg-background text-foreground;
   }
 }
+@font-face {
+  font-family: 'Cooper Std';
+  src: url('/fonts/CooperBlack-Std.otf') format('opentype');
+}
