feat: register page1

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -175,3 +175,8 @@ body {
   animation-delay: 0.4s;
 }
 
+.gradient-background {
+  background: linear-gradient(to bottom, #191748 -10%, #3D245B 20%, #B56A95 70%, #D693B9 90%);
+}
+
+
